# GitScribe

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  project-discussion.md  project-requirement.md  project-tasks.md  tailwind.config.js  tailwind.config.json
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  feature_request.yml  question.yml  task-implementation.yml
assets/: README.md
binaries/: README.md
docs/: README.md  file-discovery.md
scripts/: download_tailwind_binaries.sh  setup_tailwind.sh
src/: lib.rs  main.rs  tailwind.rs
src/components/: button.rs  header.rs  mod.rs
src/content/: demo.rs  discovery.rs  mod.rs
src/pages/: home.rs  layout.rs  mod.rs
src/services/: mod.rs  state.rs
src/utils/: mod.rs  theme.rs
styles/: input.css
