[package]
name = "gitscribe"
version = "0.1.0"
edition = "2021"
description = "A desktop application for managing static websites on GitHub"
authors = ["GitScribe Team"]
license = "MIT"
repository = "https://github.com/ghanithan/GitScribe"

[dependencies]
# Dioxus core dependencies
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-router = "0.4.3"
dioxus-hot-reload = "0.4.3"

# State management
dioxus-hooks = "0.4.1"

# Async runtime
tokio = { version = "1.35.1", features = ["full"] }

# Logging
log = "0.4.20"
env_logger = "0.11.0"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Utility
fermi = "0.4.3"  # State management for Dioxus

[dev-dependencies]
rstest = "0.18.2"
